# koyofes-navi-backend

./: .gitignore  .pre-commit-config.yaml  README.md  alias.sh  docker-compose.yml  pyproject.toml
docs/: ER.drawio
fastapi/: Dockerfile  fastapi.env.tmpl  gunicorn.conf.django.py  gunicorn.conf.fastapi.py  manage.py  pyproject.toml
fastapi/bingo/admin/: __init__.py  prize.py
fastapi/bingo/api/: __init__.py  prize.py
fastapi/bingo/migrations/: 0001_initial.py
fastapi/bingo/models/: __init__.py  prize.py
fastapi/bingo/routers/: __init__.py  prize.py
fastapi/bingo/schemas/: __init__.py  prize.py
fastapi/config/: asgi.py  auth.py  jwt.py  log.py  password.py  worker.py
fastapi/config/dependencies/: auth.py
fastapi/config/middlewares/: auth.py
fastapi/config/settings/: base.py  local.py  production.py
fastapi/timemanager/: apps.py
fastapi/timemanager/admin/: __init__.py  exhibit.py  place.py  waiting_time.py
fastapi/timemanager/api/: __init__.py  auth.py  exhibit.py  waiting_time.py
fastapi/timemanager/fixtures/: dump.json
fastapi/timemanager/middlewares/: auth.py
fastapi/timemanager/migrations/: 0001_initial.py  0002_waitingtime_place.py  0003_waitingtime_type_alter_place_exhibit_and_more.py  0004_exhibit_image.py
fastapi/timemanager/models/: __init__.py  exhibit.py  place.py  waiting_time.py
fastapi/timemanager/routers/: __init__.py  auth.py  exhibit.py  waiting_time.py
fastapi/timemanager/schemas/: __init__.py  auth.py  exhibit.py  place.py  waiting_time.py
stress-test/: .env.tmpl  docker-compose.yml
(+3 files in other folders)
